MOD: 头像修改为使用oss
